First round of styling complete. Alignment issues will need to be addressed.

--- a/src/app/my/profile/profile.component.scss
+++ b/src/app/my/profile/profile.component.scss
@@ -6,6 +6,225 @@ h1 {
     width: 75%;
     float: left;
     background-color: crimson;
+
+    ._4f1n {
+        border-left: 1px solid #f0f0f0;
+        min-height: 400px;
+        padding: 48px;
+        padding-right: 8px;
+
+        float: left;
+        width: 75%;
+
+        box-sizing: border-box;
+
+        word-wrap: break-word;
+
+        ._4h-a {
+
+            h1 {
+                font-family: "Oculus Sans", "Arial", "Helvetica", sans-serif;
+                font-size: 30px;
+                font-style: normal !important;
+                font-weight: 900;
+                line-height: 38px;
+
+                margin: 0;
+
+                color: #1c1e20;
+                display: block;
+
+                padding: 0;
+
+                padding-bottom: 32px;
+
+                font: 900 40px/48px "Oculus Sans", "Arial", "Helvetica", sans-serif;
+
+                ._4qba {
+                    font-style: normal;
+                }
+            }
+
+            ._4cip {
+                border-bottom: 1px solid #f0f0f0;
+                margin-bottom: 32px;
+                padding-bottom: 16px;
+
+                h2 {
+                    font-family: "Oculus Sans", "Arial", "Helvetica", sans-serif;
+                    font-size: 22px;
+                    font-weight: 700;
+                    line-height: 32px;
+
+                    margin: 0;
+
+                    color: #1c1e20;
+                    display: block;
+                    
+                    padding: 0;
+
+                    padding-bottom: 24px;
+
+                    font: 900 30px/38px "Oculus Sans", "Arial", "Helvetica", sans-serif;
+
+                    ._4qba {
+                        font-style: normal;
+                    }
+
+                    ._4cit {
+                        color: #8d8e8f;
+                        cursor: pointer;
+                        font-size: 16px;
+                        font-weight: normal;
+                        margin-left: 8px;
+                        text-decoration: underline;
+                        transition: color 250ms cubic-bezier(.215, .61, .355, 1);
+
+                        ._4qba {
+                            font-style: normal;
+                        }
+                    }
+
+                    ._4cit:hover {
+                        color: #4B4D4E;
+                        transition: none;
+                    }
+                }
+
+                div {
+                    .bxGrid--parent {
+                        min-width: 0;
+                        max-width: none;
+                        padding-left: 0;
+                        padding-right: 0;
+
+                        margin-left: auto;
+                        margin-right: auto;
+
+                        .bxGrid__column:first-child {
+                            padding-left: 0;
+
+                            padding-left: 4px;
+
+                            padding-right: 20px;
+
+                            padding-left: 4px;
+
+                            padding: 0 12px;
+
+                            margin-bottom: 16px;
+
+                            float: left;
+                            width: 50%;
+
+                            box-sizing: border-box;
+                            min-height: 1px;
+
+                            @media screen and (max-width: 768px) {
+                                padding: 0;
+                                width: 100%;
+                            }
+
+                            label {
+                                font-size: inherit;
+
+                                font-family: inherit;
+
+                                color: #1c1e20;
+                                cursor: pointer;
+                                display: inline-block;
+
+                                font-weight: 700;
+
+                                vertical-align: middle;
+
+                                ._4qba {
+                                    font-style: normal;
+
+                                    ._20ae {
+                                        color: #1c1e20;
+                                        cursor: default;
+                                        font-weight: 400;
+                                    }
+                                }
+                            }
+                        }
+
+                        .bxGrid__column:last-child {
+                            padding-right: 0;
+
+                            padding-left: 20px;
+
+                            padding: 0 12px;
+
+                            margin-bottom: 16px;
+
+                            float: left;
+                            width: 50%;
+
+                            box-sizing: border-box;
+                            min-height: 1px;
+
+                            @media screen and (max-width: 768px) {
+                                padding: 0;
+                                width: 100%;
+                            }                            
+
+                            label {
+                                font-size: inherit;
+
+                                font-family: inherit;
+
+                                color: #1c1e20;
+                                cursor: pointer;
+                                display: inline-block;
+
+                                font-weight: 700;
+
+                                vertical-align: middle;
+
+                                ._4qba {
+                                    font-style: normal;
+
+                                    ._20ae {
+                                        color: #1c1e20;
+                                        cursor: default;
+                                        font-weight: 400;
+                                    }
+                                }                                
+                            }
+                        }
+                    }
+
+                    .bxGrid:before, .bxGrid:after {
+                        content: " ";
+                        display: block;
+                        overflow: hidden;
+                        visibility: hidden;
+                        font-size: 0;
+                        line-height: 0;
+                        width: 0;
+                        height: 0;
+                    }
+                }
+
+                ._1h9x {
+                    padding-bottom: 16px;
+
+                    ._4qba {
+                        font-style: normal;
+                    }
+                }
+            }
+
+            ._4cip:last-child {
+                border-bottom: 0;
+                margin-bottom: 0;
+
+                padding-bottom: 16px;
+            }
+        }
+    }
 }
 
 /* media query ==================*/
